--- a/config/20.7/extras.conf
+++ b/config/20.7/extras.conf
@@ -23,6 +23,25 @@ arm_hook()
 {
 	loader_conf_fixup ${1}
 
+	# XXX enable serial console for arm
+	cat > ${1}/tmp/arm.xml << EOF
+    <serialspeed>${PRODUCT_SPEED}</serialspeed>
+    <primaryconsole>serial</primaryconsole>
+    <secondaryconsole>video</secondaryconsole>
+EOF
+	sed -i '' -e "/<system>/r ${1}/tmp/arm.xml" ${1}${CONFIG_XML}
+	rm ${1}/tmp/arm.xml
+
+	echo "-S${PRODUCT_SPEED} -D" > ${1}/boot.config
+
+	cat >> ${1}/boot/loader.conf << EOF
+comconsole_speed="${PRODUCT_SPEED}"
+console="comconsole,vidconsole"
+kern.geom.part.check_integrity=0
+boot_multicons="YES"
+boot_serial="YES"
+EOF
+
 	touch ${1}/.probe.for.growfs.nano
 }
 
